End of module 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,50 @@
     
 </head>
 <body>
-    <button class="btn btn-primary btn-lg">Click me!</button>
+<!-- Main container for all content -->
+<div class='container'>
+    <!-- Navbar -->
+    <div class='row' id='header'>
+      <div class='col-12 headerbar'>
+        <nav class='navbar justify-content-center navbar-dark bg-dark'>
+          <span class='navbar-brand mb-0 h1'>Besties</span>
+        </nav>
+        <!-- Form to add a new friend -->
+   <div class='row justify-content-center align-items-center'>
+    <div class='col-4'>
+      <div class='friendbox'>
+        <form id='friend-form'>
+          <div class='input-group'>
+            <input text='text' id='input' class='form-control' required>
+            <span class='input-group-btn'>
+              <button type='submit' class='btn btn-dark' id='add'>Add Friend</button>
+            </span>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- End of form to add new friends -->
+
+<!-- Display existing friends -->
+<div class='row justify-content-center align-items-center'>
+    <div class='col-4'>
+      <div class='card'>
+        <div class='card-header text-light bg-dark'>
+          <strong>Friends</strong>
+        </div>
+        <ul class='list-group list-group-flush' id='friend-list'></ul>
+      </div>
+    </div>
+  </div>
+  <!-- End of display for existing friends -->
+
+
+      </div>
+    </div>
+</div>
+<!-- End of main container for all content -->
+
 
     
 
